--- a/Minimal-blog-card-starter-master/style.css
+++ b/Minimal-blog-card-starter-master/style.css
@@ -32,23 +32,12 @@ article.blog-card {
 }
 
 article.blog-card header {
-    padding: 16px;
+    padding: 16px 16px 10px 16px; 
 }
 
 article.blog-card img {
     border-radius: 8px;
 
-}
-
-.author-info {
-    font-size: 14px;
-    text-align: center;
-    margin-top: 16px;
-    color: rgb(55, 65, 81);
-}
-
-.author-info a {
-    text-decoration: none;
 }
 
 .article-content {
