--- a/Business-blog-card-starter-master/style.css
+++ b/Business-blog-card-starter-master/style.css
@@ -28,8 +28,8 @@ body {
 main {
     display: flex;
     justify-content: center;
-    align-items: center;
     height: 100vh;
+    padding-top: 100px;
 }
 
 article.business-card {
